[gd_scene load_steps=13 format=2]

[ext_resource path="res://EdgeOfTheGalaxyRegular-OVEa6.otf" type="DynamicFontData" id=1]
[ext_resource path="res://StartMenu.gd" type="Script" id=2]
[ext_resource path="res://Alien_Green.png" type="Texture" id=3]
[ext_resource path="res://ship forwards.png" type="Texture" id=4]
[ext_resource path="res://gold.png" type="Texture" id=5]
[ext_resource path="res://explosion.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
extra_spacing_char = 5
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
extra_spacing_char = 10
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
extra_spacing_char = 5
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
extra_spacing_char = 5
font_data = ExtResource( 1 )

[sub_resource type="StreamTexture" id=5]
load_path = "res://.import/trophy.png-8a2a743fc220d2c0e8e268bfca083c30.stex"

[sub_resource type="StreamTexture" id=6]
load_path = "res://.import/gear.png-f6667604f1a4cbb2c335db12d132f85e.stex"

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -673, 37 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.00784314, 0.0588235, 0.32549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -91.0
margin_top = -330.0
margin_right = 91.0
margin_bottom = -50.0
custom_constants/separation = 40

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 182.0
margin_bottom = 24.0
custom_constants/hseparation = 0
custom_fonts/font = SubResource( 1 )
text = "Start Game"

[node name="StoryButton" type="Button" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 182.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 1 )
text = "Story Mode"

[node name="HelpButton" type="Button" parent="VBoxContainer"]
margin_top = 128.0
margin_right = 182.0
margin_bottom = 152.0
custom_fonts/font = SubResource( 4 )
text = "How to play"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 192.0
margin_right = 182.0
margin_bottom = 216.0
custom_fonts/font = SubResource( 2 )
text = "Quit Game"

[node name="Logo" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -175.0
margin_right = 20.0
margin_bottom = 20.0

[node name="Explosion" type="Sprite" parent="Logo"]
position = Vector2( 16.0412, 33 )
texture = ExtResource( 6 )

[node name="Gold" type="Sprite" parent="Logo"]
position = Vector2( 111.041, 18 )
texture = ExtResource( 5 )

[node name="AlienGreen" type="Sprite" parent="Logo"]
position = Vector2( -70.4814, 13.8413 )
rotation = -0.872665
scale = Vector2( 0.13, 0.13 )
texture = ExtResource( 3 )

[node name="ShipForwards" type="Sprite" parent="Logo"]
position = Vector2( 19.0412, 23 )
texture = ExtResource( 4 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = 60.0
margin_right = 288.0
margin_bottom = 153.0
custom_colors/default_color = Color( 0.858824, 0.619608, 0.164706, 1 )
custom_fonts/normal_font = SubResource( 3 )
text = "    The Chronicles Of Jerry 
	  Pugley The Conqueror"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AchievementButton" type="Button" parent="."]
margin_left = 690.0
margin_top = 880.0
margin_right = 740.0
margin_bottom = 930.0
icon = SubResource( 5 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="Button" parent="."]
margin_left = 690.0
margin_top = 940.0
margin_right = 740.0
margin_bottom = 990.0
custom_fonts/font = SubResource( 2 )
icon = SubResource( 6 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/StoryButton" to="." method="_on_StoryButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="AchievementButton" to="." method="_on_AchievementButton_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_SettingsButton_pressed"]
